--- a/Other Model(task6).ipynb
+++ b/Other Model(task6).ipynb
@@ -48,7 +48,34 @@
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from imblearn.pipeline import make_pipeline\n",
+    "from imblearn.base import BaseSampler\n",
+    "from collections import Counter\n",
+    "from imblearn.over_sampling import SMOTE, RandomOverSampler, ADASYN\n",
+    "from sklearn.metrics import classification_report\n",
+    "import time\n",
+    "\n",
+    "# model selectiion\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
+    "\n",
+    "#knn\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn import metrics\n",
+    "#svm\n",
+    "from sklearn import svm\n",
+    "#logestic regression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "execution_count": 0,
    "outputs": [
