--- a/Preprocessingt(task2).ipynb
+++ b/Preprocessingt(task2).ipynb
@@ -412,11 +412,7 @@
       "metadata": {
         "id": "q-PSG5DPx679",
         "colab_type": "code",
-        "outputId": "1b518ee5-9961-4c82-85fc-d80c10341e80",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "colab": {}
       },
       "source": [
         "ros = RandomOverSampler(sampling_strategy='minority', random_state=42)\n",
@@ -424,16 +420,7 @@
         "X_ros, y_ros = ros.fit_resample(X_train, y_train)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function safe_indexing is deprecated; safe_indexing is deprecated in version 0.22 and will be removed in version 0.24.\n",
-            "  warnings.warn(msg, category=FutureWarning)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -475,27 +462,14 @@
       "metadata": {
         "id": "q2OmkFCPV73t",
         "colab_type": "code",
-        "outputId": "06074f55-ea11-4739-c324-a100dec1ba05",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "colab": {}
       },
       "source": [
         "adasyn = ADASYN(sampling_strategy='minority',random_state=42)\n",
         "X_adasyn, y_adasyn = adasyn.fit_sample(X_train, y_train)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function safe_indexing is deprecated; safe_indexing is deprecated in version 0.22 and will be removed in version 0.24.\n",
-            "  warnings.warn(msg, category=FutureWarning)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -538,27 +512,14 @@
         "scrolled": true,
         "id": "fOQqeRpnx68G",
         "colab_type": "code",
-        "outputId": "1b6a2145-181c-4f5b-f0d0-a9baf3a91dda",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+        "colab": {}
       },
       "source": [
         "smote = SMOTE(sampling_strategy='minority', random_state=42)\n",
         "X_smt, y_smt = smote.fit_resample(X_train, y_train)\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function safe_indexing is deprecated; safe_indexing is deprecated in version 0.22 and will be removed in version 0.24.\n",
-            "  warnings.warn(msg, category=FutureWarning)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
